# internal/handler/song.go
@@ -9,6 +9,7 @@ import (
 	"strings"
 
 	musicmax "github.com/MyrzakhmetSmagul/music_max"
+	"github.com/MyrzakhmetSmagul/music_max/internal/model"
 )
 
 // getSongs return songs.
@@ -26,9 +27,9 @@ import (
 // @Param startDate query string false "Дата выпуска с этой даты включительно"
 // @Param endDate query string false "Дата выпуска до этой даты включительно"
 // @Produce  json
-// @Success 200 {object} musicmax.SongsResponse "Список песен с пагинацией и фильтрами"
-// @Failure 400 {object} musicmax.Description "Bad Request"
-// @Failure 500 {object} musicmax.Description "Internal Server Error"
+// @Success 200 {object} model.SongsResponse "Список песен с пагинацией и фильтрами"
+// @Failure 400 {object} model.Description "Bad Request"
+// @Failure 500 {object} model.Description "Internal Server Error"
 // @Router /songs [get]
 func (h *Handler) getSongs(w http.ResponseWriter, r *http.Request) {
 	slog.Info("GET api/v1/songs")
@@ -36,7 +37,7 @@ func (h *Handler) getSongs(w http.ResponseWriter, r *http.Request) {
 	page, limit, err := musicmax.GetPageAndLimit(r)
 
 	if err != nil {
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		slog.Warn("error during convertation page or limit value to int",
 			slog.String("page", r.URL.Query().Get("page")),
 			slog.String("limit", r.URL.Query().Get("limit")),
@@ -49,22 +50,30 @@ func (h *Handler) getSongs(w http.ResponseWriter, r *http.Request) {
 
 	filters, err := musicmax.GetQueryParams(r)
 	if err != nil {
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		slog.Warn("error during get filters", slog.Any("error", err))
 		return
 	}
 
 	songs, err := h.service.GetSongs(filters, page, limit)
-	if err != nil {
-		musicmax.DefaultResponse(w, http.StatusInternalServerError)
-		slog.Error("error during convertation \"page\" value to int", slog.String("page", r.URL.Query().Get("page")), slog.Any("error", err))
+	if err != nil && !errors.Is(err, model.ErrBadRequest) {
+		model.DefaultResponse(w, http.StatusInternalServerError)
+		slog.Error("error during convertation \"page\" value to int", slog.Any("error", err))
+		return
+	} else if errors.Is(err, model.ErrBadRequest) {
+		model.DefaultResponse(w, http.StatusBadRequest)
+		slog.Warn("error during convertation \"page\" value to int", slog.Any("error", err))
 		return
 	}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(http.StatusOK)
 
-	json.NewEncoder(w).Encode(songs)
+	if err := json.NewEncoder(w).Encode(songs); err != nil {
+		http.Error(w, "Failed to encode response", http.StatusInternalServerError)
+		slog.Error("failed to encode songs to JSON", slog.Any("error", err))
+		return
+	}
 }
 
 // createSong return song.
@@ -72,43 +81,43 @@ func (h *Handler) getSongs(w http.ResponseWriter, r *http.Request) {
 // @Summary Добавить песню в библиотеку
 // @Description Добавить песню в библиотеку
 // @Tags Songs
-// @Param song body musicmax.SongRequest true "Тело запроса"
+// @Param song body model.SongRequest true "Тело запроса"
 // @Produce  json
-// @Success 200 {object} musicmax.Description "OK"
-// @Failure 400 {object} musicmax.Description "Bad Request"
-// @Failure 500 {object} musicmax.Description "Internal Server Error"
+// @Success 200 {object} model.Description "OK"
+// @Failure 400 {object} model.Description "Bad Request"
+// @Failure 500 {object} model.Description "Internal Server Error"
 // @Router /songs [post]
 func (h *Handler) createSong(w http.ResponseWriter, r *http.Request) {
 	slog.Info("POST api/v1/songs")
 
-	songReq := new(musicmax.SongRequest)
+	songReq := new(model.SongRequest)
 	defer r.Body.Close()
 	err := json.NewDecoder(r.Body).Decode(songReq)
 	if err != nil {
 		slog.Warn("handler.createSong error decoding from body", slog.Any("err", err))
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 
 	slog.Debug("song request", slog.Any("songReq", songReq))
 	if strings.TrimSpace(songReq.Group) == "" || strings.TrimSpace(songReq.Name) == "" {
 		slog.Warn("bad request")
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 
 	err = h.service.CreateSong(songReq)
-	if err != nil && !errors.Is(err, musicmax.ErrBadRequest) {
+	if err != nil && !errors.Is(err, model.ErrBadRequest) {
 		slog.Error("handler.createSong error creating song", slog.Any("err", err))
-		musicmax.DefaultResponse(w, http.StatusInternalServerError)
+		model.DefaultResponse(w, http.StatusInternalServerError)
 		return
-	} else if errors.Is(err, musicmax.ErrBadRequest) {
+	} else if errors.Is(err, model.ErrBadRequest) {
 		slog.Warn("handler.createSong bad request", slog.Any("err", err))
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 
-	musicmax.DefaultResponse(w, http.StatusOK)
+	model.DefaultResponse(w, http.StatusOK)
 }
 
 // deleteSong delete song.
@@ -118,27 +127,27 @@ func (h *Handler) createSong(w http.ResponseWriter, r *http.Request) {
 // @Tags Songs
 // @Param id path string true "Song ID"
 // @Produce  json
-// @Success 200 {object} musicmax.Description "OK"
-// @Failure 400 {object} musicmax.Description "Bad Request"
-// @Failure 500 {object} musicmax.Description "Internal Server Error"
+// @Success 200 {object} model.Description "OK"
+// @Failure 400 {object} model.Description "Bad Request"
+// @Failure 500 {object} model.Description "Internal Server Error"
 // @Router /songs/{id} [delete]
 func (h *Handler) deleteSong(w http.ResponseWriter, r *http.Request) {
 	slog.Info("DELETE /api/v1/songs/{id}")
 	id := r.PathValue("id")
 	err := h.service.DeleteSong(id)
-	if err != nil && !errors.Is(err, musicmax.ErrBadRequest) {
+	if err != nil && !errors.Is(err, model.ErrBadRequest) {
 		slog.Error("Handler.deleteSong error", slog.Any("error", err))
-		musicmax.DefaultResponse(w, http.StatusInternalServerError)
+		model.DefaultResponse(w, http.StatusInternalServerError)
 		return
 	}
 
-	if errors.Is(err, musicmax.ErrBadRequest) {
+	if errors.Is(err, model.ErrBadRequest) {
 		slog.Warn("Handler.deleteSong bad request", slog.Any("error", err))
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 
-	musicmax.DefaultResponse(w, http.StatusOK)
+	model.DefaultResponse(w, http.StatusOK)
 }
 
 // updateSong update song.
@@ -147,21 +156,21 @@ func (h *Handler) deleteSong(w http.ResponseWriter, r *http.Request) {
 // @Description Изменить данные песни
 // @Tags Songs
 // @Param id path string true "Song ID"
-// @Param songInfo body musicmax.SongPatchRequest true "Тело запроса"
+// @Param songInfo body model.SongPatchRequest true "Тело запроса"
 // @Produce  json
-// @Success 200 {object} musicmax.Description "OK"
-// @Failure 400 {object} musicmax.Description "Bad Request"
-// @Failure 500 {object} musicmax.Description "Internal Server Error"
+// @Success 200 {object} model.Description "OK"
+// @Failure 400 {object} model.Description "Bad Request"
+// @Failure 500 {object} model.Description "Internal Server Error"
 // @Router /songs/{id} [patch]
 func (h *Handler) updateSong(w http.ResponseWriter, r *http.Request) {
-	slog.Info("PUT /api/v1/songs/{id}")
+	slog.Info("PATCH /api/v1/songs/{id}")
 	id := r.PathValue("id")
-	songReq := new(musicmax.SongPatchRequest)
+	songReq := new(model.SongPatchRequest)
 	defer r.Body.Close()
 	err := json.NewDecoder(r.Body).Decode(songReq)
 	if err != nil {
 		slog.Warn("handler.createSong error decoding from body", slog.Any("err", err))
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 	slog.Debug("song body", slog.Any("body", songReq))
@@ -171,20 +180,20 @@ func (h *Handler) updateSong(w http.ResponseWriter, r *http.Request) {
 		songReq.Release == nil &&
 		songReq.Link == nil &&
 		songReq.Text == nil {
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 
 	err = h.service.UpdateSong(id, songReq)
-	if err != nil && !errors.Is(err, musicmax.ErrBadRequest) && !errors.Is(err, sql.ErrNoRows) {
+	if err != nil && !errors.Is(err, model.ErrBadRequest) && !errors.Is(err, sql.ErrNoRows) {
 		slog.Error("handler.createSong error update song", slog.Any("err", err))
-		musicmax.DefaultResponse(w, http.StatusInternalServerError)
+		model.DefaultResponse(w, http.StatusInternalServerError)
 		return
-	} else if errors.Is(err, musicmax.ErrBadRequest) || errors.Is(err, sql.ErrNoRows) {
+	} else if errors.Is(err, model.ErrBadRequest) || errors.Is(err, sql.ErrNoRows) {
 		slog.Warn("handler.createSong error update song", slog.Any("err", err))
-		musicmax.DefaultResponse(w, http.StatusBadRequest)
+		model.DefaultResponse(w, http.StatusBadRequest)
 		return
 	}
 
-	musicmax.DefaultResponse(w, http.StatusOK)
+	model.DefaultResponse(w, http.StatusOK)
 }
